src/pages/home-page/home.scss
/**
 * Copyright (c) 2025, WSO2 LLC. (https://www.wso2.com).
 *
 * WSO2 LLC. licenses this file to you under the Apache License,
 * Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

.hero-outer{
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  width: 100%;
  height: fit-content;
  display: flex;
  gap: 1rem;

  .hero-inner-secton{
    height: 16vh;
    flex: 0.5;
    display: flex;
  }

  .user-info{
    display: flex;
    align-items: center;
    gap: 1rem;
    color: var(--oxygen-palette-fontColor-white);
    font-weight: 600;
    padding: 2vh 5vh;
    font-size: 1.5rem;

    .avatar-container{
      width: 8rem;
      height: 8rem;
      border-radius: 100%;

      .avatar{
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 100%;
      }
    }
  }

  .actions{
    display: flex;
    gap: 1rem;
    align-items: center;
    justify-content: center;
  }
}

.content-outer{
  background: var(--oxygen-palette-primary-backgroundColor);
  width: 100%;

  .info-graphic{
    display: flex;
    padding: 0;
    flex-direction: column;
    gap: 1.5rem;
    width: 100%;

    .info-graphic-card{
      flex: 0.5;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      .display-total{
        font-size: 4rem;
        font-weight: 600;
        margin-top: 0.5rem;
        color: var(--oxygen-palette-primary-main);

        span{
          font-size: 2rem;
          margin-right: 1rem;
        }
      }

      .lastupdate-container{
        flex: 1;
        display: flex;
        flex-direction: column;
        width: 100%;
        align-items: end;
        justify-content: flex-end;
        font-weight: 300;
        font-size: 0.8rem;
      }
      .chart-container{
        display: flex;
        width: 60%;
      }
    }

  }

  .accounts-container{
    width: 100%;

    .accordian-header-container{
      display: flex;
      padding: 0.5rem 1rem;
      align-items: center;
      justify-content: space-between;
      gap: 4rem;

      .bank-container{
        display: flex;
        align-items: center;
        gap: 2rem;

        .bank-logo-container{
          width: 4rem;
          height: 4rem;
          background: yellow;

          .bank-logo{
            width: 100%;
            height: 100%;
            object-fit: cover;
          }
        }
      }

      .balance-container{
        display: flex;
        align-items: center;
        font-size: 1.5rem;
        font-weight: 600;
        gap: 1rem;

        span{
          font-size: 1rem;
        }
      }
    }

    .table-row{
      background: var(--oxygen-palette-primary-backgroundColor);
      .table-body{
        font-size: 1.2rem;
      }
    }

  }
  .transactions-container{
    width: 100%;

    .table-container{
      background: var(--oxygen-palette-primary-tableBackground);
    }
  }

  .standing-orders-container{
    width: 100%;

    .standing-orders-container-outer{
      background: var(--oxygen-palette-primary-tableBackground);
    }
  }

}

